--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,9 +6,12 @@
         (click)="onlyOdd = !onlyOdd">Only show odd numbers</button>
       <br><br>
       <ul class="list-group">
-        <div *ngIf="onlyOdd">
+        <div 
+          *ngIf="onlyOdd">
           <li
             class="list-group-item"
+            [ngClass]="{odd: odd % 2 !== 0}" 
+            [ngStyle]="{backgroundColor: odd % 2 !== 0 ? 'yellow' : 'transparent'}"
             *ngFor="let odd of oddNumbers">
             {{ odd }}
           </li>
@@ -16,6 +19,8 @@
       <div *ngIf="!onlyOdd">
         <li
           class="list-group-item"
+          [ngClass]="{odd: even % 2 !== 0}"
+          [ngStyle]="{backgroundColor: even % 2 !== 0 ? 'yellow' : 'transparent'}"
           *ngFor="let even of evenNumbers">
           {{ even }}
         </li>
