--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
             {{ odd }}
           </li>
         </div>
-      <div *ngIf="!onlyOdd">
+<!--       <div *ngIf="!onlyOdd">
         <li
           class="list-group-item"
           [ngClass]="{odd: even % 2 !== 0}"
@@ -24,8 +24,8 @@
           *ngFor="let even of evenNumbers">
           {{ even }}
         </li>
-      </div>
-      <ng-template [ngIf]="!onlyOdd">
+      </div> -->
+<!--       <ng-template [ngIf]="!onlyOdd">
         <div>
           <li
           class="list-group-item"
@@ -35,7 +35,16 @@
           {{ even }}
         </li>
         </div>
-      </ng-template>
+      </ng-template> -->
+      <div *appUnless="onlyOdd">
+        <li
+          class="list-group-item"
+          [ngClass]="{odd: even % 2 !== 0}"
+          [ngStyle]="{backgroundColor: even % 2 !== 0 ? 'yellow' : 'transparent'}"
+          *ngFor="let even of evenNumbers">
+          {{ even }}
+        </li>
+      </div>
       </ul>
       <p appBasicHighlight>Style me with basic directive!</p>
       <p [appBetterHighlight]="'red'" [defaultColor]="'yellow'">Style me with better directive!</p>
